# docs/swagger.json
@@ -18,7 +18,7 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/checkContractType/{address}": {
+        "/checkContractStandard/{address}": {
             "get": {
                 "description": "Check if the contract at the given Ethereum address is an ERC-20 or ERC-721 contract",
                 "consumes": [
@@ -27,12 +27,12 @@
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Check the contract type",
-                "operationId": "checkContractType-contract",
+                "summary": "Check the contract standard for an Ethereum address",
+                "operationId": "checkContractStandard",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Ethereum address of the contract to checkContractType",
+                        "description": "Ethereum address of the contract to check Standard",
                         "name": "address",
                         "in": "path",
                         "required": true
@@ -42,7 +42,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/main.checkContractTypeResponse"
+                            "$ref": "#/definitions/main.checkContractStandardResponse"
                         },
                         "headers": {
                             "Token": {
@@ -134,7 +134,7 @@
         }
     },
     "definitions": {
-        "main.checkContractTypeResponse": {
+        "main.checkContractStandardResponse": {
             "type": "object",
             "properties": {
                 "address": {
